[Voucher]: Voucher không được đồng bộ #167